updates of res, proj (mostly rez)

--- a/cutCode.html
+++ b/cutCode.html
@@ -4,6 +4,26 @@ Available Fonts:
     font-family: 'Jura', sans-serif;
     font-family: 'Passion One', cursive;
 
+<!-- START styled projs -->
+
+
+ <!-- BUY OR BUCK NAME -->
+                                <a href="#buck">
+                                 <span class="bullet"> &bull;</span> <span class="page-scroll" style="font-family: 'Pacifico', cursive; font-size: 29px; color: whitesmoke;">Buy</span><span style="color:whitesmoke">&nbsp;or </span><span style="font-family: 'Audiowide', cursive; font-size: 25px; color:whitesmoke">Buck</span> 
+                                </a>
+                                <br>
+                                <br>
+                                <!-- HOW YOU DOIN NAME -->
+                                <a href="#doin"> 
+                                  <span class="bullet"> &bull;</span> <span class="page-scroll" style="font-family:'Lobster', cursive; font-size: 29px ;color:whitesmoke">How <span style="color:whitesmoke">You</span> Doin&rsquo;? </span>
+                                </a>
+                                <br>
+                                <br>
+                                <!-- YOU GOT THIS NAME -->
+                                <a href="#got"> 
+                                  <span class="bullet"> &bull;</span> <span class="page-scroll" style="font-size:22px ; font-family: 'Bungee Shade', cursive; font-weight:bold; color:whitesmoke">You Got This</span></a>
+                                <br>
+<!-- END styled projs -->
 
 
     <!-- START favion-->
