--- a/index.html
+++ b/index.html
@@ -91,11 +91,7 @@
             <script src="js/app.js"></script>
             <script src="js/text-color.js"></script>
             <script src="js/buttonAppend.js"></script>
-            <br>
-            <br> <br> <br>
-            <br>
-            <br>
-            <br> <div class="copyright"><span style="color:white; font-family:sans">Copyright © 2017</span> Leslie Moses</div>
+         <div class="copyright"><span style="color:white; font-family:sans">Copyright © 2017</span> Leslie Moses</div>
 </body>
 
 </html>
