--- a/projects.html
+++ b/projects.html
@@ -280,16 +280,14 @@
       <!-- END timeline -->
 
       
-
-                  <div class="row">
+ 
                 <div class="page-scroll">
                     <a href="#topRow">
                                 <button id="backTop"><i class="fa fa-arrow-circle-o-up fa-4x" aria-hidden="true"></i></button>
                             </a>
-                            <br><br> <br><br>
-                </div>
-            </div>
-            <br> <div class="copyright"><span style="color:white; font-family:sans">Copyright © 2017</span> Leslie Moses</div>
+                            <br>
+                </div> 
+              <div class="copyright"><span style="color:white; font-family:sans">Copyright © 2017</span> Leslie Moses</div><br>
 
 
 
@@ -304,8 +302,7 @@
       <script src="js/text-color.js"></script>
       <script src="js/buttonAppend.js"></script>
 
-      <!-- copyright
-    © 2017 Leslie Moses -->
+    
 </body>
 
 </html>
