--- a/index.html
+++ b/index.html
@@ -55,8 +55,14 @@
                 <hr>
                   <!-- <span id="projects"></span> -->
                   <!-- <span class="btnLabel"></span> -->
-                <h4><a href="projects.html">web design<span style="color:#ff1d8e">+</span><span id="develop" style="color:grey"> development</span></a></h4>
+                <h4>                    
+                    <!-- <span class="megaText"><span style="font-family:Comfortaa; font-size:25px"> heralding</span> <img id="mgea" src="css/images/mega.png" alt="megaphone" width="80"> Good news</span> -->
+                  web design<span style="color:#ff1d8e">+</span><span id="develop" style="color:grey"> development</span></a><br>
+                 
+                </h4>
                 <hr>
+
+ 
 
 <!-- START responsive blog -->
 <!-- <div class="responsive-blog-post">
@@ -91,7 +97,7 @@
             <script src="js/app.js"></script>
             <script src="js/text-color.js"></script>
             <script src="js/buttonAppend.js"></script>
-         <div class="copyright"><span style="color:white; font-family:sans">Copyright © 2017</span> Leslie Moses</div>
+         <div class="copyright">Leslie Moses<span style="color:white; font-family:sans"> © 2017</span> </div>
 </body>
 
 </html>
