--- a/resume.html
+++ b/resume.html
@@ -177,7 +177,7 @@
                             <br><br> &nbsp;&nbsp;Now as a web developer, she holds yet another tool to spotlight great news.<br><br> 
                              &nbsp;&nbsp;Do you have a great story or business? Let's tell it creatively and clearly online.
                             <br><br>
-                            <h3 class="portfolio-resume-header"><i class="fa fa-hand-o-down" style="color:#555" aria-hidden="true"></i> Reach out</h3>
+                            <h3 class="portfolio-resume-header"><i class="fa fa-hand-o-down" style="color:white" aria-hidden="true"></i> Reach out</h3>
 <br> 
                             <!-- <i class="fa fa-hand-o-down fa-2x" aria-hidden="true"></i>  <br> -->
                              <a target="_blank" href="tel:+19126568462"> <i class="fa fa-phone fa-lg" aria-hidden="true"><span style="font-family:Arial, Helvetica, sans-serif; font-size:18px">&nbsp; 912.656.8462</span></i></a><br>
@@ -208,7 +208,7 @@
 
                 </div>
 
-                <div class="copyright"><span style="color:white; font-family:sans">Copyright © 2017</span> Leslie Moses</div> <br>
+                <div class="copyright">Leslie Moses<span style="color:white; font-family:sans"> © 2017</span> </div> <br>
 
 
                 <!-- end of main row that includes form -->
