pg layout ct update

--- a/resume.html
+++ b/resume.html
@@ -115,7 +115,7 @@
                                     <span class="bullet"> &bull;</span> Special sections (e.g. glossy wedding guide)<br>
                                     <span class="bullet"> &bull;</span> Children’s prayer booklet | 6,000 copies sent nationally
                                     <br>
-                                    <span class="bullet"> &bull;</span> Hundreds of newspaper pages
+                                    <span class="bullet"> &bull;</span> 1,000+ newspaper pages (about 1,329 pgs)
 
                                 </div>
                                 <h5><strong>Tech:</strong></h5>
