copyright for mobile

--- a/projects.html
+++ b/projects.html
@@ -287,7 +287,7 @@
                             </a>
                             <br>
                 </div> 
-              <div class="copyright"><span style="color:white; font-family:sans">Copyright © 2017</span> Leslie Moses</div><br>
+                <div class="copyright">Leslie Moses<span style="color:white; font-family:sans"> © 2017</span> </div> <br>
 
 
 
