download rez fixed

--- a/resume.html
+++ b/resume.html
@@ -80,7 +80,7 @@
 
                             </div> -->
                             <img class="portfolio-resume-headshot" src="css/images/leslieandtree.jpg" alt="Moses">
-                            <br><span class="bullet"></span><b> &nbsp;&nbsp;Download resume </b><a href="https://drive.google.com/file/d/0BwLdYpWvBlKYY1UtVjFYZ2JCZFE/view?usp=sharing"><span style="color:#ff1d8e; font-family:Georgia; font-size:18px;">here </span></a><br>
+                            <br><a href="https://drive.google.com/file/d/0BwLdYpWvBlKYY1UtVjFYZ2JCZFE/view?usp=sharing"><span style=" font-size: 20px"> &nbsp;&nbsp;Download resume </span></a><br>
                          
                             <br>
                             <!-- EDUCATION section -->
