rez 3 cols changed in foundation css

--- a/resume.html
+++ b/resume.html
@@ -60,10 +60,13 @@
 
 
                 <!-- START RESUME -->
+              <div class="subtitle">  <b>design-savvy</b> <span style="font-size: 25px; font-family:sans-serif"> certified developer </span><span style="font-size: 33px; color:#ff1d8e"> + </span> <br>
+                <span style="font-size: 23px; font-family:sans-serif">award-winning writer </span> heralds
+                your brand   <span style="font-size: 16px; font-family:sans-serif">with a </span><span style="font-size: 25px; font-family:sans-serif"><b>creative</b> edge</span></div>
+                                    
 
 
                 <div class="portfolio-resume row">
-
                     <div class="large-3 columns">
                         <div class="portfolio-resume-wrapper">
                             <!-- SOC MEDIA BTNS 
