--- a/resume.html
+++ b/resume.html
@@ -170,7 +170,7 @@
                             <span class="rezDetails">&bull; <i><b>The Voice of the Martyrs</b></i> in Bartlesville, Okla. </span>
                             <br>
                             <br>
-                            <span style="font-family:Pacifico; font-size:25px; font-weight:100"><b>Story sampler</b>  </span><br><br>
+                            <h3 class="portfolio-resume-header"><i class="fa fa-book" style="color:rgb(223, 167, 114);" aria-hidden="true"></i> Story sampler</h3>
                             <span class="rezDetails">•&nbsp;&nbsp;<a target="_blank"  href="https://www.theet.com/news/local/article_8f1b432c-83ba-11e2-8e15-0019bb2963f4.html?mode=jqm"> Teen prayed; lightning struck <i class="fa fa-bolt fa-lg" style="color:gold" aria-hidden="true"></i></a> </span><br>
                             <span class="rezDetails">•&nbsp;&nbsp;<a target="_blank"  href="http://savannahnow.com/accent/2015-01-03/family-picks-savannah-girl-benefit-100000">   $100k for random 4-year-old <i class="fa fa-money fa-lg" style="color:rgb(72, 202, 100)" aria-hidden="true"></i></a></span><br>
                             <span class="rezDetails">•&nbsp;&nbsp;<a target="_blank"  href="http://savannahnow.com/accent/2016-03-19/savannah-residents-differ-respect-being-called-old-and-usage-maam-and-sir"> When to ma’am <i class="fa fa-heart fa-lg" style="color:#ff1d8e" aria-hidden="true"></i></span></a><br><br>
