rez talk adjust

--- a/cutCode.html
+++ b/cutCode.html
@@ -4,6 +4,15 @@ Available Fonts:
     font-family: 'Jura', sans-serif;
     font-family: 'Passion One', cursive;
 
+<!-- START story SAMPLER ICONS   -->
+
+    <i class="fa fa-heart fa-lg" style="color:#ff1d8e" aria-hidden="true"></i>
+    <i class="fa fa-money fa-lg" style="color:rgb(72, 202, 100)" aria-hidden="true"></i>
+    <i class="fa fa-bolt fa-lg" style="color:gold" aria-hidden="true"></i>
+
+    <!-- END story SAMPLER ICONS   -->
+
+
 <!-- START styled projs -->
 
 
