--- a/resume.html
+++ b/resume.html
@@ -82,10 +82,16 @@
                 <div class="subtitle">
                     <b>design-savvy</b>
                     <span style="font-size: 25px; font-family:sans-serif;"> certified developer </span>
-                    <span style="font-size: 33px; color:#ff1d8e"> + </span>
+
                     <br>
-                    <span style="font-size: 23px; font-family:sans-serif">award-winning writer </span> heralds your brand
-                    <span style="font-size: 16px; font-family:sans-serif">with a </span>
+                    <span style="font-size: 19px; font-family:sans-serif">
+                        <span style="font-size: 24px; color:#888">
+                            <span style="color:white">{</span>
+                            <span style="color:#ff1d8e">+</span> award-winning writer
+                            <span style="color:white">}</span>
+                        </span>
+                    </span> heralds your brand
+                    <span style="font-size: 16px; font-family:sans-serif; color: #888">with a </span>
                     <span style="font-size: 25px; font-family:sans-serif">
                         <b>creative</b> edge</span>
                 </div>
@@ -210,7 +216,7 @@
                             <br>
                             <span class="bullet"> &bull;</span>
                             <a style="color:whitesmoke" target="_blank" href="http://savannahnow.com/news/2017-06-02/savannah-morning-news-named-best-newspaper-georgia">
-                            2nd place | ’17 Feature Writing </a>
+                                2nd place | ’17 Feature Writing </a>
                             <br>
                             <span class="bullet"> &bull;</span>
                             <a style="color:whitesmoke" target="_blank" href="http://savannahnow.com/news-latest-news/2015-06-06/savannah-morning-news-honored-25-times-georgia-press-association">3rd place | ’15 Religion Coverage </a>
@@ -223,7 +229,7 @@
                             <br>
                             <span class="bullet"> &bull;</span>
                             <a style="color:whitesmoke" target="_blank" href="http://usatoday30.usatoday.com/news/nation/states/southcarolina/2009-03-14-3056404411_x.htm">
-                            1st place | ’09 Lifestyle Feature Writing </a>
+                                1st place | ’09 Lifestyle Feature Writing </a>
                             <br>
                             <br>
                             <h5>
@@ -284,17 +290,17 @@
                                 <i class="fa fa-book" style="color:rgb(50, 101, 160);" aria-hidden="true"></i> Story sample</h3>
                             <span class="rezDetails">•&nbsp;&nbsp;
                                 <a target="_blank" href="https://www.theet.com/news/local/article_8f1b432c-83ba-11e2-8e15-0019bb2963f4.html?mode=jqm">
-                                Teen prayed; lightning struck </a>
+                                    Teen prayed; lightning struck </a>
                             </span>
                             <br>
                             <span class="rezDetails">•&nbsp;&nbsp;
                                 <a target="_blank" href="http://savannahnow.com/accent/2015-01-03/family-picks-savannah-girl-benefit-100000">
-                                $100k for random 4-year-old </a>
+                                    $100k for random 4-year-old </a>
                             </span>
                             <br>
                             <span class="rezDetails">•&nbsp;&nbsp;
                                 <a target="_blank" href="http://savannahnow.com/accent/2016-03-19/savannah-residents-differ-respect-being-called-old-and-usage-maam-and-sir">
-                                When to "ma’am" </span>
+                                    When to "ma’am" </span>
                             </a>
                             <br>
                             <br>
