hero talk improved w/ Frederica

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                   <!-- <span class="btnLabel"></span> -->
                 <h4>                    
                     <!-- <span class="megaText"><span style="font-family:Comfortaa; font-size:25px"> heralding</span> <img id="mgea" src="css/images/mega.png" alt="megaphone" width="80"> Good news</span> -->
-                    <a  href="projects.html">web design<span style="color:#ff1d8e">+</span><span id="develop" style="color:grey"> development</span></a><br>
+                    <a  href="projects.html">web designer<br><span style="font-size: 62px; color:#ff1d8e">+</span><span id="develop" style="color:grey"> developer</span></a><br>
                  
                 </h4>
                 <hr>
