--- a/resume.html
+++ b/resume.html
@@ -90,7 +90,7 @@
                             <span style="color:#ff1d8e">+</span> award-winning writer
                             <span style="color:white">}</span>
                         </span>
-                    </span> heralds your brand
+                    </span><span style="font-family:'Fredericka the Great', cursive;"> heralds your brand</span>
                     <span style="font-size: 16px; font-family:sans-serif; color: #888">with a </span>
                     <span style="font-size: 25px; font-family:sans-serif">
                         <b>creative</b> edge</span>
@@ -288,17 +288,17 @@
                             <br>
                             <h3 class="portfolio-resume-header">
                                 <i class="fa fa-book" style="color:rgb(50, 101, 160);" aria-hidden="true"></i> Story sample</h3>
-                            <span class="rezDetails">•&nbsp;&nbsp;
+                            <span class="rezStories">•&nbsp;&nbsp;
                                 <a target="_blank" href="https://www.theet.com/news/local/article_8f1b432c-83ba-11e2-8e15-0019bb2963f4.html?mode=jqm">
                                     Teen prayed; lightning struck </a>
                             </span>
                             <br>
-                            <span class="rezDetails">•&nbsp;&nbsp;
+                            <span class="rezStories">•&nbsp;&nbsp;
                                 <a target="_blank" href="http://savannahnow.com/accent/2015-01-03/family-picks-savannah-girl-benefit-100000">
                                     $100k for random 4-year-old </a>
                             </span>
                             <br>
-                            <span class="rezDetails">•&nbsp;&nbsp;
+                            <span class="rezStories">•&nbsp;&nbsp;
                                 <a target="_blank" href="http://savannahnow.com/accent/2016-03-19/savannah-residents-differ-respect-being-called-old-and-usage-maam-and-sir">
                                     When to "ma’am" </span>
                             </a>
