--- a/resume.html
+++ b/resume.html
@@ -80,7 +80,7 @@
 
 
                 <div class="subtitle">
-                    <b>design-savvy</b>
+                    <b>Design-savvy</b>
                     <span style="font-size: 25px; font-family:sans-serif;"> certified developer </span>
 
                     <br>
@@ -93,7 +93,7 @@
                     </span><span style="font-family:'Fredericka the Great', cursive;"> heralds your brand</span>
                     <span style="font-size: 16px; font-family:sans-serif; color: #888">with a </span>
                     <span style="font-size: 25px; font-family:sans-serif">
-                        <b>creative</b> edge</span>
+                        <b>creative</b> edge.</span>
                 </div>
 
 
@@ -117,14 +117,14 @@
                             <img class="portfolio-resume-headshot" src="css/images/leslieandtree.jpg" alt="Moses">
                             <br>
                             <a href="https://drive.google.com/file/d/0BwLdYpWvBlKYY1UtVjFYZ2JCZFE/view?usp=sharing">
-                                <span style=" font-size: 20px"> &nbsp;&nbsp;Download resume </span>
+                                <span style="font-family:georgia; font-size: 22px"> &nbsp;&nbsp;Download resume <i class="fa fa-download" aria-hidden="true"></i></span>
                             </a>
                             <br>
 
                             <br>
                             <!-- EDUCATION section -->
                             <h3 class="portfolio-resume-header">
-                                <i class="fa fa-graduation-cap" style="color:#555;" aria-hidden="true"></i> EDUCATION</h3>
+                                <i class="fa fa-graduation-cap" style="color:rgb(133, 14, 60);" aria-hidden="true"></i> EDUCATION</h3>
                             <span class="boldRezHed">Georgia Tech Professional Edu.</span> &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
                             <i class="fa fa-graduation-cap" aria-hidden="true"></i>
                             <span style="font-size:14px"> July '17</span>
@@ -286,21 +286,21 @@
                                 </i> in Bartlesville, Okla. </span>
                             <br>
                             <br>
-                            <h3 class="portfolio-resume-header">
-                                <i class="fa fa-book" style="color:rgb(50, 101, 160);" aria-hidden="true"></i> Story sample</h3>
-                            <span class="rezStories">•&nbsp;&nbsp;
-                                <a target="_blank" href="https://www.theet.com/news/local/article_8f1b432c-83ba-11e2-8e15-0019bb2963f4.html?mode=jqm">
-                                    Teen prayed; lightning struck </a>
+                            <h3 class="portfolio-resume-header"><i class="fa fa-book" style="color:rgb(50, 101, 160);" aria-hidden="true"></i>
+                                 Story sampler</h3>
+                            <span class="rezStories"><a class="rezStories" target="_blank" href="https://www.theet.com/news/local/article_8f1b432c-83ba-11e2-8e15-0019bb2963f4.html?mode=jqm">•&nbsp;&nbsp;
+                                
+                                    Teen Prayed; Lightning Struck </a>
                             </span>
                             <br>
-                            <span class="rezStories">•&nbsp;&nbsp;
-                                <a target="_blank" href="http://savannahnow.com/accent/2015-01-03/family-picks-savannah-girl-benefit-100000">
-                                    $100k for random 4-year-old </a>
+                            <span class="rezStories">
+                                <a class="rezStories" target="_blank" href="http://savannahnow.com/accent/2015-01-03/family-picks-savannah-girl-benefit-100000">
+                                    •&nbsp;&nbsp; $100k for Random 4-Year-Old </a>
                             </span>
                             <br>
-                            <span class="rezStories">•&nbsp;&nbsp;
-                                <a target="_blank" href="http://savannahnow.com/accent/2016-03-19/savannah-residents-differ-respect-being-called-old-and-usage-maam-and-sir">
-                                    When to "ma’am" </span>
+                            <span class="rezStories">
+                                <a class="rezStories" target="_blank" href="http://savannahnow.com/accent/2016-03-19/savannah-residents-differ-respect-being-called-old-and-usage-maam-and-sir">•&nbsp;&nbsp;
+                                    When to "Ma’am" </span>
                             </a>
                             <br>
                             <br>
@@ -312,7 +312,7 @@
 
 
 
-                            &nbsp;&nbsp;Leslie Moses, of Savannah, Ga., worked the last decade in print journalism, heralding stories of survivors, heroes
+                            &nbsp;&nbsp;<span style="font-size:x-large; font-family:'Georgia';">L</span>eslie Moses, of Savannah, Ga., worked the last decade in print journalism, heralding stories of survivors, heroes
                             and grit.
                             <br>
                             <br> &nbsp;&nbsp;Now as a web developer, she holds yet another tool to spotlight great news.
@@ -359,7 +359,7 @@
                 <div class="page-scroll">
                     <a href="#topRow">
                         <button id="backTop">
-                            <i class="fa fa-arrow-circle-o-up fa-3x" aria-hidden="true"></i>
+                            <i class="fa fa-arrow-circle-o-up fa-2x" aria-hidden="true"></i>
                         </button>
                     </a>
 
