--- a/cutCode.html
+++ b/cutCode.html
@@ -5,10 +5,17 @@ Available Fonts:
     font-family: 'Passion One', cursive;
 
 <!-- START story SAMPLER ICONS   -->
-
+••••••••••
     <i class="fa fa-heart fa-lg" style="color:#ff1d8e" aria-hidden="true"></i>
+    <i class="fa fa-book" style="color:rgb(50, 101, 160);" aria-hidden="true"></i>
+
+
     <i class="fa fa-money fa-lg" style="color:rgb(72, 202, 100)" aria-hidden="true"></i>
+    <i class="fa fa-usd fa-lg" style="color:rgb(117, 129, 119)" aria-hidden="true"></i>
+
+
     <i class="fa fa-bolt fa-lg" style="color:gold" aria-hidden="true"></i>
+    <i class="fa fa-clock-o fa-lg" style="color:rgb(172, 169, 171);" aria-hidden="true"></i>
 
     <!-- END story SAMPLER ICONS   -->
 
