New favicon: w brush

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <!-- <span class="megaText"><span style="font-family:Comfortaa; font-size:25px"> heralding</span> <img id="mgea" src="css/images/mega.png" alt="megaphone" width="80"> Good news</span> -->
                     <a  href="projects.html">web designer<br><span class="plusSignHero">+</span><span id="develop" style="color:grey"> developer</span></a><br>
                     <br><br>
-                    <i style="color:#ff1d8e" class="fa fa-paint-brush fa-3x"> </i>
+                    <i style="color:white" class="fa fa-paint-brush fa-3x"> </i>
                     <br><br>
                 </h4>
                 <hr>
