--- a/resume.html
+++ b/resume.html
@@ -96,7 +96,7 @@
                         <b>creative</b> edge.</span>
                 </div>
 
-
+<br><br>
                 <!-- START RESUME -->
                 <div class="portfolio-resume row">
                     <div class="large-3 columns">
@@ -117,15 +117,15 @@
                             <img class="portfolio-resume-headshot" src="css/images/leslieandtree.jpg" alt="Moses">
                             <br>
                             <a href="https://drive.google.com/file/d/0BwLdYpWvBlKYY1UtVjFYZ2JCZFE/view?usp=sharing">
-                                <span style="font-family:georgia; font-size: 22px"> &nbsp;&nbsp;Download resume <i class="fa fa-download" aria-hidden="true"></i></span>
+                                <span style="font-family:georgia; color: black; font-size: 22px"> &nbsp;&nbsp;Download resume <i style="color: black;" class="fa fa-download" aria-hidden="true"></i></span>
                             </a>
                             <br>
 
                             <br>
                             <!-- EDUCATION section -->
                             <h3 class="portfolio-resume-header">
-                                <i class="fa fa-graduation-cap" style="color:rgb(133, 14, 60);" aria-hidden="true"></i> EDUCATION</h3>
-                            <span class="boldRezHed">Georgia Tech Professional Edu.</span> &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
+                                <i class="fa fa-graduation-cap" style="color:black;" aria-hidden="true"></i> EDUCATION</h3>
+                            <span class="boldRezHed">Georgia Tech Professional Edu.</span> &nbsp;&nbsp;
                             <i class="fa fa-graduation-cap" aria-hidden="true"></i>
                             <span style="font-size:14px"> July '17</span>
                             <br>
@@ -135,8 +135,7 @@
                             <br>
                             <br>
 
-                            <span class="boldRezHed">Armstrong State Univ.</span> &nbsp;&nbsp;
-                            <i class="fa fa-graduation-cap" aria-hidden="true"></i>
+                            <span class="boldRezHed">Armstrong State <br>University</span>                            <i class="fa fa-graduation-cap" aria-hidden="true"></i>
                             <span style="font-size:14px"> Dec. '06</span>
                             <br>
 
@@ -161,16 +160,16 @@
                         <div class="portfolio-resume-wrapper">
                             <h3 class="portfolio-resume-header">
                                 <i class="fa fa-paint-brush" style="color:#ff1d8e" ; aria-hidden="true"></i> Design
-                                <span style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color:white">+</span> Development </h3>
+                                <span style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color:black">+</span> Development </h3>
                             <div class="portfolio-resume-spacing">
-                                <span class="rezSubHed">Designer for apps + countless publications</span>
+                                <span class="boldRezHed">Designer for web + countless publications</span>
                                 <br>
                                 <br>
                                 <div class="portfolio-resume-spacing">
                                     <span class="bullet"> &bull;</span>
                                     <b> &nbsp;&nbsp;Three app projects </b>
                                     <a href="projects.html">
-                                        <span style="color:#ff1d8e; font-family:Georgia; font-size:18px;">here </span>
+                                        <span style="color:#ff1d8e; font-family:Georgia; font-size:18px;"><b></b>here </b></span>
                                     </a>
                                     <br>
                                     <span class="bullet"> &bull;</span>
@@ -184,7 +183,7 @@
 
                                 </div>
                                 <h5>
-                                    <strong>Tech:</strong>
+                                    <span class="boldRezHed">Tech</span> 
                                 </h5>
                                 <p>
                                     <span class="bullet"> &bull;</span> &nbsp;&nbsp;
@@ -212,14 +211,14 @@
                                 <strong>Georgia Press Association</strong>
                             </h5>
                             <span class="bullet"> &bull;</span>
-                            <a style="color:whitesmoke" target="_blank" href="http://savannahnow.com/news/2017-06-02/savannah-morning-news-named-best-newspaper-georgia">1st place | ’17 Religion Writing</a>
+                            <a style="color:black" target="_blank" href="http://savannahnow.com/news/2017-06-02/savannah-morning-news-named-best-newspaper-georgia">1st place | ’17 Religion Writing</a>
                             <br>
                             <span class="bullet"> &bull;</span>
-                            <a style="color:whitesmoke" target="_blank" href="http://savannahnow.com/news/2017-06-02/savannah-morning-news-named-best-newspaper-georgia">
+                            <a style="color:black" target="_blank" href="http://savannahnow.com/news/2017-06-02/savannah-morning-news-named-best-newspaper-georgia">
                                 2nd place | ’17 Feature Writing </a>
                             <br>
                             <span class="bullet"> &bull;</span>
-                            <a style="color:whitesmoke" target="_blank" href="http://savannahnow.com/news-latest-news/2015-06-06/savannah-morning-news-honored-25-times-georgia-press-association">3rd place | ’15 Religion Coverage </a>
+                            <a style="color:black" target="_blank" href="http://savannahnow.com/news-latest-news/2015-06-06/savannah-morning-news-honored-25-times-georgia-press-association">3rd place | ’15 Religion Coverage </a>
                             <br>
                             <br>
                             <h5>
@@ -228,7 +227,7 @@
                             <span class="bullet"> &bull;</span> 3rd place | ’10 Article Series
                             <br>
                             <span class="bullet"> &bull;</span>
-                            <a style="color:whitesmoke" target="_blank" href="http://usatoday30.usatoday.com/news/nation/states/southcarolina/2009-03-14-3056404411_x.htm">
+                            <a style="color:black" target="_blank" href="http://usatoday30.usatoday.com/news/nation/states/southcarolina/2009-03-14-3056404411_x.htm">
                                 1st place | ’09 Lifestyle Feature Writing </a>
                             <br>
                             <br>
@@ -245,8 +244,8 @@
                         <div class="portfolio-resume-wrapper">
 
                             <h3 class="portfolio-resume-header">
-                                <i class="fa fa-newspaper-o" style="color:white" aria-hidden="true"></i> Journalism</h3>
-                            <span class="rezSubHed">Freelance writer, photographer</span>
+                                <i class="fa fa-newspaper-o" style="color:black" aria-hidden="true"></i> Journalism</h3>
+                            <span class="boldRezHed">Freelance writer, photographer</span>
                             <br>
                             <span style="font-size:14px">'13-current; ’07-’08</span>
                             <br>
@@ -257,7 +256,7 @@
                             <br>
                             <br>
 
-                            <span class="rezSubHed">Staff writer, photographer</span>
+                            <span class="boldRezHed">Staff writer, photographer</span>
                             <br>
                             <span style="font-size:14px">’11-’08</span>
                             <br>
@@ -286,7 +285,7 @@
                                 </i> in Bartlesville, Okla. </span>
                             <br>
                             <br>
-                            <h3 class="portfolio-resume-header"><i class="fa fa-book" style="color:rgb(50, 101, 160);" aria-hidden="true"></i>
+                            <h3 class="portfolio-resume-header"><i class="fa fa-book" style="color:rgb(70, 49, 49);" aria-hidden="true"></i>
                                  Story sampler</h3>
                             <span class="rezStories"><a class="rezStories" target="_blank" href="https://www.theet.com/news/local/article_8f1b432c-83ba-11e2-8e15-0019bb2963f4.html?mode=jqm">•&nbsp;&nbsp;
                                 
@@ -300,7 +299,7 @@
                             <br>
                             <span class="rezStories">
                                 <a class="rezStories" target="_blank" href="http://savannahnow.com/accent/2016-03-19/savannah-residents-differ-respect-being-called-old-and-usage-maam-and-sir">•&nbsp;&nbsp;
-                                    When to "Ma’am" </span>
+                                    When to <i>Ma’am</i> </span>
                             </a>
                             <br>
                             <br>
@@ -308,11 +307,11 @@
 
 
                             <h3 class="portfolio-resume-header">
-                                <i class="fa fa-user" style="color:darksalmon;" aria-hidden="true"></i> Bio</h3>
+                                <i class="fa fa-user" style="color:black;" aria-hidden="true"></i> Bio</h3>
 
 
 
-                            &nbsp;&nbsp;<span style="font-size:x-large; font-family:'Georgia';">L</span>eslie Moses, of Savannah, Ga., worked the last decade in print journalism, heralding stories of survivors, heroes
+                            &nbsp;&nbsp;<span style="font-size:large; font-family:'Georgia';"><b>Leslie Moses</b>, of Savannah, Ga., worked the last decade in print journalism, heralding stories of survivors, heroes
                             and grit.
                             <br>
                             <br> &nbsp;&nbsp;Now as a web developer, she holds yet another tool to spotlight great news.
@@ -321,18 +320,18 @@
                             <br>
                             <br>
                             <h3 class="portfolio-resume-header">
-                                <i class="fa fa-hand-o-down" style="color:white" aria-hidden="true"></i> Reach out</h3>
-                            <br>
+                                <i class="fa fa-hand-o-down" style="color:black" aria-hidden="true"></i> Reach out</h3></span>
+                            
                             <!-- <i class="fa fa-hand-o-down fa-2x" aria-hidden="true"></i>  <br> -->
                             <a target="_blank" href="tel:+19126568462">
-                                <i class="fa fa-phone fa-lg" aria-hidden="true">
-                                    <span style="font-family:Arial, Helvetica, sans-serif; font-size:18px">&nbsp; 912.656.8462</span>
+                                <i style="color:black;"class="fa fa-phone fa-lg" aria-hidden="true">
+                                    <span style="font-family:Arial, Helvetica, sans-serif; color:black; font-size:18px">&nbsp; 912.656.8462</span>
                                 </i>
                             </a>
                             <br>
                             <a target="_top" href="mailto:lesmoses@gmail.com?Subject=Hi%20Leslie">
-                                <i class="fa fa-envelope fa-lg" aria-hidden="true">
-                                    <span style="font-family:Arial, Helvetica, sans-serif; font-size:18px">&nbsp; LesMoses@gmail.com</span>
+                                <i style="color:black;"class="fa fa-envelope fa-lg" aria-hidden="true">
+                                    <span style="color:black;font-family:Arial, Helvetica, sans-serif; font-size:18px">&nbsp; LesMoses@gmail.com</span>
                                 </i>
                             </a>
                             <br>
