--- a/resume.html
+++ b/resume.html
@@ -124,7 +124,7 @@
                             <br>
                             <!-- EDUCATION section -->
                             <h3 class="portfolio-resume-header">
-                                <i class="fa fa-graduation-cap" style="color:black;" aria-hidden="true"></i> EDUCATION</h3>
+                                <i class="fa fa-graduation-cap" style="color:rgb(51, 40, 40);" aria-hidden="true"></i> EDUCATION</h3>
                             <span class="boldRezHed">Georgia Tech Professional Edu.</span> &nbsp;&nbsp;
                             <i class="fa fa-graduation-cap" aria-hidden="true"></i>
                             <span style="font-size:14px"> July '17</span>
@@ -244,7 +244,7 @@
                         <div class="portfolio-resume-wrapper">
 
                             <h3 class="portfolio-resume-header">
-                                <i class="fa fa-newspaper-o" style="color:black" aria-hidden="true"></i> Journalism</h3>
+                                <i class="fa fa-newspaper-o" style="color:#555" aria-hidden="true"></i> Journalism</h3>
                             <span class="boldRezHed">Freelance writer, photographer</span>
                             <br>
                             <span style="font-size:14px">'13-current; ’07-’08</span>
@@ -285,7 +285,7 @@
                                 </i> in Bartlesville, Okla. </span>
                             <br>
                             <br>
-                            <h3 class="portfolio-resume-header"><i class="fa fa-book" style="color:rgb(70, 49, 49);" aria-hidden="true"></i>
+                            <h3 class="portfolio-resume-header"><i class="fa fa-book" style="color:rgb(87, 67, 67);" aria-hidden="true"></i>
                                  Story sampler</h3>
                             <span class="rezStories"><a class="rezStories" target="_blank" href="https://www.theet.com/news/local/article_8f1b432c-83ba-11e2-8e15-0019bb2963f4.html?mode=jqm">•&nbsp;&nbsp;
                                 
