cut title for hackathon

--- a/resume.html
+++ b/resume.html
@@ -209,7 +209,7 @@
                                 <i class="fa fa-trophy" style="color:goldenrod;" aria-hidden="true"></i> Awards</h3>
                             
                                 <h5>
-                                    <strong>Open Sav'h Civic Hackathon</strong><span style="font-size:14px">&nbsp; Oct. '17</span>
+                                    <strong>Open Sav'h Hackathon</strong><span style="font-size:14px">&nbsp; Oct. '17</span>
                                 </h5>
                                 <span style="font-size:14px;color:#ff1d8e"><a style="color:#ff1d8e" target="_blank" href="http://savannahnow.com/news/2017-10-23/hurricane-hackers-build-more-prepared-savannah?mc_cid=987370303e&mc_eid=d31583a2ae">
                                     Team Wright Square</a></span><br>
