--- a/resume.html
+++ b/resume.html
@@ -79,24 +79,8 @@
 
 
 
-                <div class="subtitle">
-                    <b>Design-savvy</b>
-                    <span style="font-size: 25px; font-family:sans-serif;"> certified developer </span>
 
-                    <br>
-                    <span style="font-size: 19px; font-family:sans-serif">
-                        <span style="font-size: 24px; color:#888">
-                            <span style="color:white">{</span>
-                            <span style="color:#ff1d8e">+</span> award-winning writer
-                            <span style="color:white">}</span>
-                        </span>
-                    </span><span style="font-family:'Fredericka the Great', cursive;"> heralds your brand</span>
-                    <span style="font-size: 16px; font-family:sans-serif; color: #888">with a </span>
-                    <span style="font-size: 25px; font-family:sans-serif">
-                        <b>creative</b> edge.</span>
-                </div>
 
-<br><br>
                 <!-- START RESUME -->
                 <div class="portfolio-resume row">
                     <div class="large-3 columns">
@@ -114,11 +98,12 @@
                                 <a href="tel:+19126568462"><i class="fa fa-phone" aria-hidden="true"></i>912-656-8462</a><br>
 
                             </div> -->
-                            <img class="portfolio-resume-headshot" src="css/images/leslieandtree.jpg" alt="Moses">
-                            <br>
                             <a href="https://drive.google.com/file/d/0BwLdYpWvBlKYY1UtVjFYZ2JCZFE/view?usp=sharing">
-                                <span style="font-family:georgia; color: black; font-size: 22px"> &nbsp;&nbsp;Download resume <i style="color: black;" class="fa fa-download" aria-hidden="true"></i></span>
+                                <span style="font-family:georgia; color: black; font-size: 22px"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i style="color: black;" class="fa fa-download" aria-hidden="true"></i> Download resume </span>
                             </a>
+                            <br><br>
+                            <img class="portfolio-resume-headshot" src="css/images/leslieandtree.jpg" alt="Moses">
+                            
                             <br>
 
                             <br>
@@ -251,7 +236,7 @@
                             <h5>
                                 <strong>Armstrong State Univ.</strong>
                             </h5>
-                            <span style="font-weight:bold">&bull; Outstanding Staff Writer </span> |
+                            <span style="font-weight:500">&bull; Outstanding Staff Writer </span> |
                             <i>The Inkwell</i> ’05
                         </div>
 
