icon update fa5

--- a/resume.html
+++ b/resume.html
@@ -4,6 +4,7 @@
 <head>
     <!-- Font Awesome link -->
     <script src="https://use.fontawesome.com/4c6396de4f.js"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -33,8 +34,7 @@
 
                 <h1 class="leslieTitle">
                     <a href="index.html">leslie
-                        <span class="mosesTitle">M
-                            <img id="bluePic" src="css/images/boughtMose.png" alt="Moses" width="140">s e s </span>
+                        <span class="mosesTitle">m <img id="bluePic" src="css/images/boughtMose.png" alt="Moses" width="100">ses</span>
                     </a>
                 </h1>
                 <br>
@@ -322,7 +322,7 @@
                             <br>
                             <br>
                             <h3 class="portfolio-resume-header">
-                                <i class="fa fa-hand-o-down" style="color:black" aria-hidden="true"></i> Reach out</h3></span>
+                                <i class="far fa-hand-point-down" style="color:black" aria-hidden="true"></i> Reach out</h3></span>
                             
                             <!-- <i class="fa fa-hand-o-down fa-2x" aria-hidden="true"></i>  <br> -->
                             <a target="_blank" href="tel:+19126568462">
@@ -360,7 +360,7 @@
                 <div class="page-scroll">
                     <a href="#topRow">
                         <button id="backTop">
-                            <i class="fa fa-arrow-circle-o-up fa-2x" aria-hidden="true"></i>
+                            <i class="fas fa-caret-up fa-4x" aria-hidden="true"></i>
                         </button>
                     </a>
 
