--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <!-- Font Awesome link -->
     <script src="https://use.fontawesome.com/4c6396de4f.js"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
