--- a/resume.html
+++ b/resume.html
@@ -246,7 +246,7 @@
                         <div class="portfolio-resume-wrapper">
 
                             <h3 class="portfolio-resume-header">
-                                <i class="fa fa-newspaper-o" style="color:#555" aria-hidden="true"></i> Journalism</h3>
+                                <i class="far fa-newspaper" style="color:#555" aria-hidden="true"></i> Journalism</h3>
                             <span class="boldRezHed">Freelance writer, photographer</span>
                             <br>
                             <span style="font-size:14px">'13-current; ’07-’08</span>
@@ -326,15 +326,15 @@
                             
                             <!-- <i class="fa fa-hand-o-down fa-2x" aria-hidden="true"></i>  <br> -->
                             <a target="_blank" href="tel:+19126568462">
-                                <i style="color:black;"class="fa fa-phone fa-lg" aria-hidden="true">
+                                <!-- <i style="color:black;"class="fa fa-phone fa-lg" aria-hidden="true"> -->
                                     <span style="font-family:Arial, Helvetica, sans-serif; color:black; font-size:18px">&nbsp; 912.656.8462</span>
-                                </i>
+                                <!-- </i> -->
                             </a>
                             <br>
                             <a target="_top" href="mailto:lesmoses@gmail.com?Subject=Hi%20Leslie">
-                                <i style="color:black;"class="fa fa-envelope fa-lg" aria-hidden="true">
+                                <!-- <i style="color:black;" class="far fa-envelope" aria-hidden="true"> -->
                                     <span style="color:black;font-family:Arial, Helvetica, sans-serif; font-size:18px">&nbsp; LesMoses@gmail.com</span>
-                                </i>
+                                <!-- </i> -->
                             </a>
                             <br>
                             <br>
