--- a/projects.html
+++ b/projects.html
@@ -133,7 +133,7 @@
 
         <div class="timeline-item">
           <div class="timeline-icon">
-              <a target="_blank" href="http://invulnerable-madame-10087.herokuapp.com"><img class="webImage" src="css/images/eye.png"></a>
+              <a target="_blank" href=""><img class="webImage" src="css/images/eye.png"></a>
             <!-- <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill-rule="evenodd" clip-rule="evenodd"><path d="M17 24h-10l-2-14h14l-2 14zm-.592-10h-8.816l.571 4h7.674l.571-4zm1.631-8c0 .922 1.092 1.618 1.961 1.618v1.382h-16v-1.382c.87 0 2-.697 2-1.618h12.039zm-7.73-.691c2.819-2.143-.594-2.353.077-3.868-2.361 2.113.85 2.169-.077 3.868zm2.486-.001c4.236-3.238-.877-3.067.105-5.308-3.382 2.895 1.259 2.959-.105 5.308z"/></svg> -->
           </div>
           <div class="timeline-content">
@@ -142,8 +142,9 @@
               <br>
               <br>
               <p>App (in progress) helps girls who are hopeless take the next step through stories</p>
+          
               <br>
-              <a target="_blank" href="http://invulnerable-madame-10087.herokuapp.com"><img class="webImage" src="css/images/GotThis.png"></a>
+              <a target="_blank" href=""><img class="webImage" src="css/images/GotThis.png"></a>
               <span class="bold">My Role:</span>
               <br> Developer, Designer
               <br>
