--- a/projects.html
+++ b/projects.html
@@ -286,7 +286,7 @@
                             </a>
                             <br>
                 </div> 
-                <div class="copyright">Leslie Moses<span style="color:white; font-family:sans"> © 2017</span> </div> <br>
+                <div class="copyright">Leslie.Moses<span style="color:white; font-family:sans"> © 2017</span> </div> <br>
 
 
 
